--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/Requisiciones.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/Requisiciones.cshtml
@@ -5,13 +5,9 @@
 
 <script src="~/assets/plugins/bootstrap-notify/bootstrap-notify.js"></script>
 <script src="~/assets/js/pages/ui/notifications.js"></script>
-
-<script src="~/assets/bundles/datatablescripts.bundle.js"></script>
-
-<script src="~/assets/js/pages/tables/jquery-datatable.js"></script>
+    @*<script src="~/assets/bundles/datatablescripts.bundle.js"></script>
+<script src="~/assets/js/pages/tables/jquery-datatable.js"></script>*@
 <script src="~/Scripts/js/RequisicionesJS.js"></script>
-
-
 <script type="text/javascript">
     var Mensaje = '@ViewBag.Msj';
     var tipo = '@ViewBag.Tipo';
