--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/RolCompras.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/RolCompras.cshtml
@@ -50,7 +50,7 @@
 @Html.HiddenFor(m => m.CatConsultarCentroCosto)
 @Html.HiddenFor(m => m.CatInsertarCuentaContable)
 @Html.HiddenFor(m => m.CatModificarCuentaContable)
-@Html.HiddenFor(m => m.CatEliminarCuentaContable)<
+@Html.HiddenFor(m => m.CatEliminarCuentaContable)
 @Html.HiddenFor(m => m.CatConsultarCuentaContable)
 @Html.HiddenFor(m => m.CatInsertarCliente)
 @Html.HiddenFor(m => m.CatModificarCliente)
