--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Roles/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Roles/Index.cshtml
@@ -255,7 +255,7 @@
                                                     </tr>
                                                 </thead>
                                                 <tbody>
-                                                    @Html.EditorFor(m => m.ListaRoles, new { tipo =  "Cat"})
+                                                    @Html.EditorFor(m => m.ListaRoles, new { tipo = "Cat" })
                                                 </tbody>
                                             </table>
                                         </div>
@@ -268,14 +268,14 @@
                             <!--Compra tab content-->
                             <div class="tab-content">
                                 <div id="SistemaCompra" role="tabpanel" class="tab-pane">
-                                    <div class="row clearfix" id="btnCompra">
+                                    <div class="row clearfix" id="btnMovilCompra">
                                         <div class="col-md-12">
                                             <div class="form-group">
                                                 <input type="submit" id="btnGuardaPCompra" name="Guardar" value="Guardar" formaction=@Url.Action("GuardarPermisosCompra") formmethod="post" class="btn btn-raised btn-primary float-right btn-round" />
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="blockquote-info blockquote btn-round" id="divgvwCompra">                                
+                                    <div class="blockquote blockquote-info btn-round" id="divgvwCompra">
                                         <div class="table-responsive">
                                             <table class="table table-striped table-hover">
                                                 <thead>
@@ -308,9 +308,9 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="blockquote-info blockquote btn-round" id="DivgvwMovilCompra">
+                                    <div class="blockquote blockquote-info btn-round" id="DivgvwMovilCompra">
                                         <div class="table-responsive">
-                                            <table id="tabSisCompra" class="table table-striped table-hover">
+                                            <table class="table table-striped table-hover">
                                                 <thead>
                                                     <tr>
                                                         <th>Rol</th>
@@ -380,38 +380,38 @@
                                 </div>
                             </div>
                             @*<div class="tab-content">
-                                <div id="SistemaVentas" class="tab-pane" role="tabpanel">
-                                    <i>Sistema Ventas sin datos para mostrar</i>
-                                </div>                               
-                                <div id="MovilVentas" role="tabpanel" class="tab-pane">
-                                    <div class="row clearfix" id="btnMovilVenta">
-                                        <div class="col-md-12">
-                                            <div class="form-group">
-                                                <input type="submit" id="btnGuardaPMVenta" name="Guardar" value="Guardar" formaction=@Url.Action("GuardarPerMovilVenta") formmethod="post" class="btn btn-raised btn-primary float-right btn-round" />
+                                    <div id="SistemaVentas" class="tab-pane" role="tabpanel">
+                                        <i>Sistema Ventas sin datos para mostrar</i>
+                                    </div>
+                                    <div id="MovilVentas" role="tabpanel" class="tab-pane">
+                                        <div class="row clearfix" id="btnMovilVenta">
+                                            <div class="col-md-12">
+                                                <div class="form-group">
+                                                    <input type="submit" id="btnGuardaPMVenta" name="Guardar" value="Guardar" formaction=@Url.Action("GuardarPerMovilVenta") formmethod="post" class="btn btn-raised btn-primary float-right btn-round" />
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="blockquote-info blockquote btn-round" id="MovilVentas">
+                                            <div class="table-responsive">
+                                                <table id="tabMovilVenta" class="table table-striped table-hover">
+                                                    <thead>
+                                                        <tr>
+                                                            <th>Rol</th>
+                                                            <th>App Disposicion Efectivo</th>
+                                                            <th>App Camioneta Punto Venta</th>
+                                                            <th>App Estacion Carb Punto Venta</th>
+                                                            <th>App Pipa Punto Venta</th>
+                                                            <th>Acciones</th>
+                                                        </tr>
+                                                    </thead>
+                                                    <tbody>
+                                                        @Html.EditorFor(m => m.ListaMovilVenta)
+                                                    </tbody>
+                                                </table>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="blockquote-info blockquote btn-round" id="MovilVentas">
-                                        <div class="table-responsive">
-                                            <table id="tabMovilVenta" class="table table-striped table-hover">
-                                                <thead>
-                                                    <tr>
-                                                        <th>Rol</th>
-                                                        <th>App Disposicion Efectivo</th>
-                                                        <th>App Camioneta Punto Venta</th>
-                                                        <th>App Estacion Carb Punto Venta</th>
-                                                        <th>App Pipa Punto Venta</th>
-                                                        <th>Acciones</th>
-                                                    </tr>
-                                                </thead>
-                                                <tbody>
-                                                    @Html.EditorFor(m => m.ListaMovilVenta)
-                                                </tbody>
-                                            </table>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>*@
+                                </div>*@
                             <!--Inventario tab content-->
                             <div class="tab-content">
                                 <div id="SistemaInventario" class="tab-pane">
